# RUST_Real-time_plots_using_SLINT_and_PLOTTERS.rs

./: Cargo.toml  build.rs
src/: Thread3.slint  main.rs
