[package]
name = "Thread3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "0.3.0" 
rand = "0.8.5"
plotters = { version = "^0.3.0", default-features = true }
tokio = { version = "1.21.2", features = ["full"] }

[build-dependencies]
slint-build = "0.3.0"
